--- a/geekshop/products/templates/products/product_list.html
+++ b/geekshop/products/templates/products/product_list.html
@@ -10,7 +10,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="{{ product.image.url }}"
+                                 src="{{ product.image }}"
                                  alt="">
                         </a>
                         <div class="card-body">
