--- a/geekshop/products/templates/products/product_list.html
+++ b/geekshop/products/templates/products/product_list.html
@@ -1,16 +1,13 @@
-{% load static %}
-
 
 <div class="product_list">
     {% if products %}
         <div class="row">
             {% for product in products %}
-
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="{{ product.image }}"
+                                 src="{{ product.image.url }}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -26,6 +23,7 @@
                         </div>
                     </div>
                 </div>
+
             {% endfor %}
         </div>
     {% else %}
