--- a/geekshop/users/templates/users/register.html
+++ b/geekshop/users/templates/users/register.html
@@ -15,48 +15,64 @@
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Создать аккаунт</h3>
                             </div>
                             <div class="card-body">
-                                <form method="post", action="{% url 'users:registration' %}">
-                                    {% csrf_token %}
-                                    <div class="form-row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="{form.first_name.id_for_label}">Имя</label>
-                                                {{ form.first_name }}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="{form.last_name.id_for_label}">Фамилия</label>
-                                                {{ form.last_name }}
-                                            </div>
+                                <form method="post", action="{% url "users:registration" %}">
+                                     {% csrf_token %}
+                                <div class="form-row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="small mb-1" for="{{ form.first_name.id_for_label }}">
+                                                Имя
+                                            </label>
+                                            {{ form.first_name }}
                                         </div>
                                     </div>
-                                    <div class="form-row">
-                                        <div class="col-md-6">
-                                            <label class="small mb-1" for="{form.username.id_for_label}">Имя пользователя</label>
-                                            {{ form.username }}
-                                        </div>
-                                        <div class="col-md-6">
-                                            <label class="small mb-1" for="{form.email.id_for_label}">Адрес электронной
-                                                почты</label>
-                                            {{ form.email }}
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="small mb-1" for="{{ form.last_name.id_for_label }}">
+                                                Фамилия
+                                            </label>
+                                            {{ form.last_name }}
                                         </div>
                                     </div>
-                                    <div class="form-row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="{form.password1.id_for_label}">Пароль</label>
-                                                {{ form.password1 }}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="{form.password2.id_for_label}">Подтверждение
-                                                    пароля</label>
-                                                    {{ form.password2 }}
-                                            </div>
+                                     <div class="col-md-6">
+                                        <label class="small mb-1" for="{{ form.age.id_for_label }}">
+                                            Возраст
+                                        </label>
+                                        {{ form.age }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-md-6">
+                                        <label class="small mb-1" for="{{ form.username.id_for_label }}">
+                                            Имя пользователя
+                                        </label>
+                                        {{ form.username }}
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label class="small mb-1" for="{{ form.email.id_for_label }}">
+                                            Адрес электронной почты
+                                        </label>
+                                        {{ form.email }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="small mb-1" for="{{ form.password1.id_for_label }}">
+                                                Пароль
+                                            </label>
+                                            {{ form.password1 }}
                                         </div>
                                     </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="small mb-1" for="{{ form.password2.id_for_label }}">
+                                                Подтверждение пароля
+                                            </label>
+                                            {{ form.password2 }}
+                                        </div>
+                                    </div>
+
                                     <div class="form-group mt-4 mb-0">
                                         <input class="btn btn-primary btn-block" type="submit" value="Создать аккаунт">
                                     </div>
