--- a/geekshop/users/templates/users/profile.html
+++ b/geekshop/users/templates/users/profile.html
@@ -59,7 +59,23 @@
                         <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                     </div>
                 </div>
-            </form>
+                 {% if messages or form.errors %}
+                            <div class="
+                            alert alert-dismissible fade show
+                            {% if messages %}alert-success {% else %} alert-warning {% endif %} " role="alert"
+                             style="margin-top: 50px;">
+
+                            {% if messages %}
+                                {% for message in messages %}
+                                    {{ message }}
+                                {% endfor  %}
+                            {% else %}
+                                {{ form.non_field_errors }}
+                            {% endif %}
+
+                            </div>
+                {% endif %}
+                </form>
         </div>
         <div class="col-lg-5">
           {% include 'basket/basket.html' %}
