add ajax in products add

--- a/geekshop/products/templates/products/product_list.html
+++ b/geekshop/products/templates/products/product_list.html
@@ -18,8 +18,8 @@
                             <p class="card-text">{{ product.description }}</p>
                         </div>
                         <div class="card-footer text-center">
-                            <a href="{% url 'baskets:basket_add' product.id %}" class="btn btn-outline-success">
-                                Отправить в корзину</a>
+                             <input type="button" value="Отправить в корзину"
+                                   class="btn btn-outline-success" id="{{ product.id }}">
                         </div>
                     </div>
                 </div>
