--- a/geekshop/products/templates/products/products.html
+++ b/geekshop/products/templates/products/products.html
@@ -55,7 +55,7 @@
                 </div>
 
 
-                {% include '/home/zagmak/PycharmProjects/geekshop-server/geekshop/products/templates/products/product_list.html' %}
+                {% include 'products/product_list.html' %}
 
 
                 <nav aria-label="Page navigation example">
@@ -87,4 +87,6 @@
 </footer>
 {% endblock %}
 
-
+{% block js %}
+    <script src="{% static 'js/products.js' %}"></script>
+{% endblock %}
