--- a/geekshop/admins/templates/admins/admin-users-create.html
+++ b/geekshop/admins/templates/admins/admin-users-create.html
@@ -5,60 +5,92 @@
     <main>
             <div class="container-fluid">
                 <h1 class="mt-4">Создание пользователя</h1>
-                <form action="">
-                    <div class="form-row">
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Имя</label>
-                                <input class="form-control py-4" id="inputFirstName" type="text"/>
-                            </div>
+                <form action="{% url 'admins_staff:admin_users_create' %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% if form.errors %}
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                             style="margin-top: 50px;">
+                            {{ form.errors }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label class="small mb-1" for="inputLastName">Фамилия</label>
-                                <input class="form-control py-4" id="inputLastName" type="text"/>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-row mb-2">
-                        <div class="col-lg-12">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="userAvatar" size="50">
-                                <label class="custom-file-label" for="userAvatar">Выберите изображение</label>
-                            </div>
+                        {% endif %}
+
+                <div class="form-row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.first_name.id_for_label }}">
+                                Имя
+                            </label>
+                            {{ form.first_name }}
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                            <input class="form-control py-4" id="inputUsername" type="text"
-                                   aria-describedby="usernameHelp"/>
-                        </div>
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputEmailAddress">Адрес электронной
-                                почты</label>
-                            <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                   aria-describedby="emailHelp"/>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.last_name.id_for_label }}">
+                                Фамилия
+                            </label>
+                            {{ form.last_name }}
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputPassword1">Пароль</label>
-                            <input class="form-control py-4" id="inputPassword1" type="text"
-                                   aria-describedby="password1Help"/>
-                        </div>
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputPassword2">Повторите пароль</label>
-                            <input class="form-control py-4" id="inputPassword2" type="text"
-                                   aria-describedby="password2Help"/>
+                </div>
+                <div class="form-row mb-2">
+                    <div class="col-lg-12">
+                        <div class="custom-file">
+                            {{ form.image }}
+                            <label class="custom-file-label" for="{{ form.image.id_for_label }}">
+                                Выберите изображение
+                            </label>
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                </div>
+                <div class="form-row">
+                    <div class="col-lg-6">
+                        <label class="small mb-1" for="{{ form.username.id_for_label }}">
+                            Имя пользователя
+                        </label>
+                        {{ form.username }}
+                    </div>
+                    <div class="col-lg-6">
+                        <label class="small mb-1" for="{{ form.email.id_for_label }}">
+                            Адрес электронной почты
+                        </label>
+                        {{ form.email }}
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-lg-6" align="center">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.age.id_for_label }}">
+                                Возраст
+                            </label>
+                            {{ form.age }}
                         </div>
                     </div>
-                </form>
+                </div>
+                <div class="form-row">
+                    <div class="col-lg-6">
+                        <label class="small mb-1" for="{{ form.password1.id_for_label }}">
+                            Пароль
+                        </label>
+                        {{ form.password1 }}
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.password2.id_for_label }}">
+                                Подтверждение пароля
+                            </label>
+                            {{ form.password2 }}
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                    </div>
+                </div>
+            </form>
             </div>
         </main>
 {% endblock %}
