--- a/geekshop/admins/templates/admins/admin-users-read.html
+++ b/geekshop/admins/templates/admins/admin-users-read.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="admin-users-create.html">
+                        <a href="{% url 'admins_staff:admin_users_create' %}">
                             <button class="btn btn-success">Создать пользователя</button>
                         </a>
                     </div>
