--- a/geekshop/admins/templates/admins/admin-users-read.html
+++ b/geekshop/admins/templates/admins/admin-users-read.html
@@ -1,7 +1,24 @@
 {% extends 'admins/base.html' %}
 
 {% block content %}
-   <main>
+      {% if messages %}
+            <div class="
+            alert alert-dismissible fade show
+            {% if messages %} alert-success {% else %} alert-warning {% endif %}" role="alert"
+                 style="margin-top: 50px;">
+                {% if messages %}
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
+                {% else %}
+                    {{ form.non_field_errors }}
+                {% endif %}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+      {% endif %}
+    <main>
             <div class="container-fluid">
                 <h1 class="mt-4">Пользователи</h1>
                 <div class="card mb-4">
