--- a/geekshop/admins/templates/admins/admin-users-update-delete.html
+++ b/geekshop/admins/templates/admins/admin-users-update-delete.html
@@ -2,53 +2,73 @@
 
 {% block content %}
    <main>
-            <div class="container-fluid">
-                <h1 class="mt-4">Редактирование пользователя | valeriy</h1>
+         {% if form.errors %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                 style="margin-top: 50px;">
+                {{ form.errors }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endif %}
+        <div class="container-fluid">
+                <h1 class="mt-4">Редактирование пользователя | {{ selected_user.username }}</h1>
                 <div class="card-body">
-                    <form action="">
+                    <form action="{% url 'admins_staff:admin_users_update' selected_user.id %}" method="post"
+                          enctype="multipart/form-data">
+                        {% csrf_token %}
                         <div class="form-row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label class="small mb-1" for="inputFirstName">Имя</label>
-                                    <input class="form-control py-4" id="inputFirstName" type="text" value="Валерий"/>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label class="small mb-1" for="inputLastName">Фамилия</label>
-                                    <input class="form-control py-4" id="inputLastName" type="text" value="Павликов"/>
-                                </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
+                                {{ form.first_name }}
                             </div>
                         </div>
-                        <div class="form-row mb-2">
-                            <div class="col-lg-12">
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="userAvatar" size="50">
-                                    <label class="custom-file-label" for="userAvatar">Выберите изображение</label>
-                                </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Фамилия</label>
+                                {{ form.last_name }}
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="col-lg-6">
-                                <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                                <input class="form-control py-4" id="inputUsername" type="text"
-                                       aria-describedby="usernameHelp"
-                                       value="valeriy"/>
-                            </div>
-                            <div class="col-lg-6">
-                                <label class="small mb-1" for="inputEmailAddress">Адрес электронной
-                                    почты</label>
-                                <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                       aria-describedby="emailHelp"
-                                       value="valerypavlikov@yandex.ru"/>
+                    </div>
+                    <div class="form-row mb-2">
+                        <div class="col-lg-12">
+                            <div class="custom-file">
+                                {{ form.image }}
+                                <label class="custom-file-label" for="{{ form.image.id_for_label }}">
+                                    {{  user.image  }}
+                                </label>
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="col-lg-12" style="margin-top: 33px;">
-                                <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                    </div>
+                    <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
+                            {{ form.username }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form.email.id_for_label }}">
+                                Адрес электронной почты
+                            </label>
+                            {{ form.email }}
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-md-6" align="center">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.age.id_for_label }}">
+                                    Возраст
+                                </label>
+                                {{ form.age }}
                             </div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                        </div>
+                    </div>
+                </form>
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-danger btn-block" type="submit" value="Удалить">
