--- a/geekshop/users/templates/users/profile.html
+++ b/geekshop/users/templates/users/profile.html
@@ -39,7 +39,12 @@
                     <div class="col-lg-12">
                         <div class="custom-file">
                             {{ form.image }}
-                            <label class="custom-file-label" for="{{ form.image.id_for_label }}">Выберите изображение</label>
+                            <label class="custom-file-label" for="{{ form.image.id_for_label }}">
+                                {% if user.image %}
+                                    {{ user.image }}
+                                {% else %}
+                                    Выберите изображение:
+                                {% endif %} </label>
                         </div>
                     </div>
                 </div>
