--- a/geekshop/products/templates/products/base.html
+++ b/geekshop/products/templates/products/base.html
@@ -46,7 +46,10 @@
                             <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
                         </li>
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
-                        <li><a class="dropdown-item" href="{% url 'admins_staff:index' %}">Админ-панель</a></li>
+                        {% if user.is_staff or user.is_superuser %}
+                            <li><a class="dropdown-item" href="{% url 'admins_staff:index' %}">Админ-панель</a></li>
+
+                        {% endif %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
