add AdminCategories view

--- a/geekshop/admins/templates/admins/admin-categories-read.html
+++ b/geekshop/admins/templates/admins/admin-categories-read.html
@@ -33,20 +33,29 @@
                                 <tr>
                                     <th>Название</th>
                                     <th>Описание</th>
+                                    <th>Активность</th>
                                 </tr>
                                 </thead>
                                 <tfoot>
                                 <tr>
                                     <th>Название</th>
                                     <th>Описание</th>
+                                    <th>Активность</th>
                                 </tr>
                                 </tfoot>
                                 <tbody>
                                 {% for product in products_categories %}
                                     <tr>
-                                    <td><a href="{% url 'admins_staff:admin_users_update' user.id %}" style="color: dodgerblue">
+                                    <td><a href="{% url 'admins_staff:admin_categories_update' product.id %}" style="color: dodgerblue">
                                         {{ product.name }}</a></td>
                                     <td>{{ product.description }}</td>
+                                    <td class="text-center">
+                                        {% if product.is_active %}
+                                            <i class="fas fa-check-circle"></i>
+
+                                        {% else %}
+                                            <i class="fas fa-times-circle"></i>
+                                        {% endif %} </td>
 
                                 </tr>
                                 {% endfor %}
@@ -55,8 +64,8 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'admins_staff:admin_users_create' %}">
-                            <button class="btn btn-success">Создать пользователя</button>
+                        <a href="{% url 'admins_staff:admin_categories_create' %}">
+                            <button class="btn btn-success">Создать категорию</button>
                         </a>
                     </div>
                 </div>
