--- a/geekshop/products/templates/products/products.html
+++ b/geekshop/products/templates/products/products.html
@@ -14,15 +14,17 @@
             <div class="col-lg-3">
 
                 <h1 class="my-4">GeekShop</h1>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">Новинки</a>
-                    <a href="#" class="list-group-item">Одежда</a>
-                    <a href="#" class="list-group-item">Обувь</a>
-                    <a href="#" class="list-group-item">Аксессуары</a>
-                    <a href="#" class="list-group-item">Подарки</a>
+                <{% for category in categories %}
+                    {% if category.is_active %}
+                        <a href="{% url 'products:category' category.id %}" class="list-group-item">
+                            {{ category.name }}
+                        </a>
+                    {% endif %}
+
+                    {% endfor %}
                 </div>
 
-            </div>
+
             <!-- /.col-lg-3 -->
 
             <div class="col-lg-9">
