add AdminProducts view

--- a/geekshop/admins/templates/admins/base.html
+++ b/geekshop/admins/templates/admins/base.html
@@ -47,19 +47,19 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Приложения</div>
-                    <a class="nav-link" href="{% url 'admins_staff:admins_users' %}">
+                    <a class="nav-link" href="{% url 'admins_staff:admin_users' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-users"></i>
                         </div>
                         Пользователи
                     </a>
-                    <a class="nav-link" href="{% url 'admins_staff:admins_categories' %}">
+                    <a class="nav-link" href="{% url 'admins_staff:admin_categories' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-shopping-basket"></i>
                         </div>
                         Категории
                     </a>
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="{% url 'admins_staff:admin_products' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-tshirt"></i>
                         </div>
