--- a/geekshop/products/templates/products/product_list.html
+++ b/geekshop/products/templates/products/product_list.html
@@ -1,9 +1,11 @@
 
 <div class="product_list">
+    {% csrf_token %}
     {% if products %}
         <div class="row">
             {% for product in products %}
-                <div class="col-lg-4 col-md-6 mb-4">
+                {% if product.is_active %}
+                    <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
@@ -23,6 +25,8 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
+
 
             {% endfor %}
         </div>
