--- a/geekshop/admins/templates/admins/admin-users-read.html
+++ b/geekshop/admins/templates/admins/admin-users-read.html
@@ -50,7 +50,7 @@
                                 </tr>
                                 </tfoot>
                                 <tbody>
-                                {% for user in users %}
+                                {% for user in object_list %}
                                     <tr>
                                     <td><a href="{% url 'admins_staff:admin_users_update' user.id %}" style="color: dodgerblue">
                                         {{ user.username }}</a></td>
