--- a/geekshop/admins/templates/admins/admin-users-update-delete.html
+++ b/geekshop/admins/templates/admins/admin-users-update-delete.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
                 <h1 class="mt-4">Редактирование пользователя | {{ selected_user.username }}</h1>
                 <div class="card-body">
-                    <form action="{% url 'admins_staff:admin_users_update' selected_user.id %}" method="post"
+                    <form action="{% url 'admins_staff:admin_users_update' user.id %}" method="post"
                           enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-row">
@@ -71,7 +71,7 @@
                 </form>
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
-                            <a href="{% url 'admins_staff:admin_users_delete' selected_user.id %}"
+                            <a href="{% url 'admins_staff:admin_users_delete' user.id %}"
                                class="btn btn-danger btn-block">
                                 Удалить
                             </a>
