--- a/geekshop/admins/templates/admins/admin-products-update-delete.html
+++ b/geekshop/admins/templates/admins/admin-products-update-delete.html
@@ -12,9 +12,9 @@
             </div>
         {% endif %}
         <div class="container-fluid">
-                <h1 class="mt-4">Редактирование продукта | {{ selected_product.name }}</h1>
+                <h1 class="mt-4">Редактирование продукта | {{ object.name }}</h1>
                 <div class="card-body">
-                    <form action="{% url 'admins_staff:admin_products_update' selected_product.id %}" method="post"
+                    <form action="{% url 'admins_staff:admin_products_update' object.id %}" method="post"
                           enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-row">
@@ -74,10 +74,11 @@
                 </form>
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
-                            <a href="{% url 'admins_staff:admin_products_delete' selected_product.id %}"
-                               class="btn btn-danger btn-block">
-                                Удалить
-                            </a>
+                            <form action="{% url 'admins_staff:admin_products_delete' object.id %}" method="post">
+                                {% csrf_token %}
+                            <input type="submit" class="btn btn-danger btn-block" value="Удалить">
+
+                            </form>
                         </div>
                     </div>
                 </div>
