--- a/geekshop/users/templates/users/profile.html
+++ b/geekshop/users/templates/users/profile.html
@@ -40,11 +40,7 @@
                         <div class="custom-file">
                             {{ form.image }}
                             <label class="custom-file-label" for="{{ form.image.id_for_label }}">
-                                {% if user.image %}
-                                    {{ user.image }}
-                                {% else %}
-                                    Выберите изображение:
-                                {% endif %} </label>
+                                    Выберите изображение:</label>
                         </div>
                     </div>
                 </div>
