--- a/geekshop/admins/templates/admins/admin-products-read.html
+++ b/geekshop/admins/templates/admins/admin-products-read.html
@@ -50,9 +50,9 @@
                                 </tr>
                                 </tfoot>
                                 <tbody>
-                                {% for product in admin_products %}
+                                {% for product in object_list %}
                                     <tr>
-                                    <td><a href="{% url 'admins_staff:admin_products_update' product.id %}" style="color: dodgerblue">
+                                    <td><a href="{% url 'admins_staff:admin_products_update' product.pk %}" style="color: dodgerblue">
                                         {{ product.name }}</a></td>
                                     <td>{{ product.description }}</td>
                                     <td>{{ product.price }} </td>
